# polydata-to-json

./: .clang-format  CMakeLists.txt  LICENSE  README.md  main.cxx  vtkSerializeToJson.cxx  vtkSerializeToJson.h
